manifests/tigera/10-deny-egress.yaml
---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: deny-egress
spec:
  order: 10
  selector: all()
  types:
    - Egress
