manifests/tigera/100-NP-guestbook-ns.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: guestbook-ns
  namespace: guestbook
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: guestbook

    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: yaobank

  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
        - podSelector:
            matchLabels:
              app: istiod
      ports:
        - port: 15012
          protocol: TCP

    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: guestbook

    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: yaobank
      ports:
        - port: 80
          protocol: TCP
