manifests/tigera/1000-allow-dns.yaml
---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-dns
spec:
  selector: all()
  order: 1000
  types:
    - Egress
  egress:
    - action: Allow
      protocol: UDP  
      destination:
        selector: k8s-app == "kube-dns"
        ports: 
          - 53
    - action: Allow
      protocol: TCP
      destination:
        selector: k8s-app == "kube-dns"
        ports: 
          - 53
